# poyoOS

./: Cargo.toml  Makefile  README.md  cookies  main.rs
.cargo/: config.toml
config/: grub.cfg
src/: gdt.rs  main.rs  text.rs
